# Quantum-life-dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  ethics.md  params.yaml  pyproject.toml
scripts/: benchmark.py  train_phase5.py
scripts/tests/: test_metrics.py
scripts/tests/..github/workflows/: ci.yml
src/qlife/: metrics.py  plotting.py
src/qlife/src/qlife/: data.py
src/qlife/src/qlife/src/qlife/: model.py
