[tool.poetry]
name = "quantum-life-informatics"
version = "0.1.0"
description = "QLS: reproducible pipeline (metrics, modeling, benchmarks)"
authors = ["You"]
readme = "README.md"
packages = [{ include = "src/qlife" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26"
pandas = "^2.2"
matplotlib = "^3.9"
seaborn = "^0.13"
scikit-learn = "1.5.2"
xgboost = "^2.1"
shap = "^0.46"
scikit-optimize = "^0.9"
joblib = "^1.4"
pyyaml = "^6.0.2"
dvc = "^3.55"
dvc-gdrive = "^3.0"         # or pick any remote you prefer
pre-commit = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
